--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  Copyright (c) 2011 Adam Shanks (ChainsDD)
-  
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-  
-    http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
+<!-- Copyright (C) 2011 Adam Shanks (ChainsDD)
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<resources xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Superuser</string>
     <string name="app_name_request">Superuser Request</string>
 
     <string name="description_home">Home</string>
     <string name="description_log">Log</string>
-    <string name="description_preferences">Preferences</string>
+    <string name="description_preferences">Settings</string>
     <string name="description_extras">Extras</string>
     
     <string name="page_label_info">info</string>
@@ -29,7 +29,7 @@
     
     <string name="menu_extras">Extras</string>
     <string name="menu_get_elite">Get Elite</string>
-    <string name="menu_preferences">Preferences</string>
+    <string name="menu_preferences">Settings</string>
     <string name="menu_clear">Clear</string>
     <string name="menu_clear_log">Clear log</string>
     <string name="menu_toggle">Toggle</string>
@@ -49,7 +49,7 @@
 
     <string name="yes">Yes</string>
     <string name="no">No</string>
-    <string name="ok">Okay</string>
+    <string name="ok">OK</string>
     <string name="loading">loading</string>
     
     <string name="allow">Allow</string>
@@ -57,7 +57,7 @@
     <string name="deny">Deny</string>
     <string name="set">Set</string>
     <string name="remember">Remember</string>
-    <string name="remember_disabled">Remembering disabled until su is updated</string>
+    <string name="remember_disabled">Remembering disabled until \'su\' is updated</string>
     <string name="any">Apply to any commands from this app</string>
     <string name="request">%1$s as %2$s (uid: %3$d)</string>
     <string name="unknown">Unknown name</string>
@@ -87,42 +87,42 @@
     <string name="info_elite_not_installed">elite not installed</string>
     <string name="info_get_elite">get elite</string>
     <string name="info_check_updates">tap to check for updates</string>
-    <string name="info_outdated_binary_notification">outdated binary notification</string>
+    <string name="info_outdated_binary_notification">outdated \'su\' notification</string>
     <string name="info_temp_unroot">temp unroot</string>
     <string name="info_temp_unroot_unsuccessful">temp unroot unsuccessful</string>
     <string name="info_ota_survival">ota rootkeeper</string>
     <string name="info_ota_survival_warning">note: these options are not guaranteed and will not work for all devices</string>
     <string name="info_version_loading">loading Superuser version</string>
     <string name="info_version">superuser v%1$s (%2$d)</string>
-    <string name="info_bin_version_loading">Loading su binary version</string>
-    <string name="info_bin_version">su binary v%1$s (%2$d)</string>
-    <string name="info_bin_version_not_found">su binary not found</string>
+    <string name="info_bin_version_loading">loading \'su\' version</string>
+    <string name="info_bin_version">\'su\' v%1$s (%2$d)</string>
+    <string name="info_bin_version_not_found">\'su\' not found</string>
     <string name="info_check_for_updates">tap to check for updates</string>
-    <string name="info_outdated_notification">outdated binary notification</string>
+    <string name="info_outdated_notification">outdated \'su\' notification</string>
     <string name="info_changelog_summary">Display the changelog</string>
-    <string name="info_working">working…</string>
+    <string name="info_working">working\u2026</string>
 
     <string name="use_global_settings">Use global settings</string>
     <string name="notifications_enabled">\u0020\u0020\u0020\u0020Notifications enabled</string>
     <string name="logging_enabled">\u0020\u0020\u0020\u0020Logging enabled</string>
 
-    <string name="zero">0</string>
-    <string name="one">1</string>
-    <string name="two">2</string>
-    <string name="three">3</string>
-    <string name="four">4</string>
-    <string name="five">5</string>
-    <string name="six">6</string>
-    <string name="seven">7</string>
-    <string name="eight">8</string>
-    <string name="nine">9</string>
+    <string name="zero" translatable="false">0</string>
+    <string name="one" translatable="false">1</string>
+    <string name="two" translatable="false">2</string>
+    <string name="three" translatable="false">3</string>
+    <string name="four" translatable="false">4</string>
+    <string name="five" translatable="false">5</string>
+    <string name="six" translatable="false">6</string>
+    <string name="seven" translatable="false">7</string>
+    <string name="eight" translatable="false">8</string>
+    <string name="nine" translatable="false">9</string>
 
     <string name="request_message">%1$s is requesting Superuser access.\n\nWarning: If you did not initiate this action, or if you do not understand this request, it\'s generally a good idea to deny it.</string>
     <string name="request_more_info">Tap for more info</string>
     <string name="request_less_info">Tap for less info</string>
     <string name="request_app_name">App</string>
 
-    <string name="pref_title">Preferences</string>
+    <string name="pref_title">Settings</string>
     <string name="pref_category_security">Security</string>
     <string name="pref_user_mode_title">Multi-user mode</string>
     <string name="pref_pin_title">Use PIN</string>
@@ -159,7 +159,7 @@
     <string name="pref_category_notification_title">Notifications</string>
     <string name="pref_notifications_title">Notifications</string>
     <string name="pref_notifications_type_title">Notification type</string>
-    <string name="pref_notifications_type_summary">Type of notification to show when an app is granted SU permissions</string>
+    <string name="pref_notifications_type_summary">Type of notification to show when an app is granted Superuser permissions</string>
     <string name="pref_toast_location_title">Toast location</string>
     <string name="pref_toast_location_summary">Where the notification will show on the screen</string>
     <string name="pref_category_nfc_title">NFC</string>
@@ -167,83 +167,73 @@
     <string name="pref_write_allow_tag_title">Write new allow tag</string>
     <string name="pref_write_allow_tag_summary">Write a new tag to be used to allow</string>
     <string name="pref_category_backup_restore_title">Backup/Restore</string>
-    <string name="pref_backup_title">Backup apps/preferences</string>
-    <string name="backup_complete">Backup written to sdcard</string>
-    <string name="pref_restore_title">Restore apps/preferences</string>
+    <string name="pref_backup_title">Backup apps/settings</string>
+    <string name="backup_complete" product="nosdcard">Backup written to USB storage</string>
+    <string name="backup_complete" product="default">Backup written to SD Card</string>
+    <string name="pref_restore_title">Restore apps/settings</string>
     <string name="pref_get_elite_summary">Buy elite to unlock all the options</string>
-    <plurals name="restore_complete">
-        <item quantity="one">One app and preferences restored</item>
-        <item quantity="other">%1$d apps and preferences restored</item>
-    </plurals>
-    <string name="restore_complete_prefs_only">Preferences restored</string>
+
+    <string name="restore_complete_prefs_only">Settings restored</string>
     <string name="pref_category_info_title">General</string>
     <string name="pref_elite_only">Only available to Elite users</string>
-    <plurals name="pref_logs_deleted">
-        <item quantity="one">One log deleted</item>
-        <item quantity="other">%1$d logs deleted</item>
-    </plurals>
 
-    <string name="updater_title">Binary Updater</string>
-    <string name="updater_new_su_found">New version of su binary found. Update now?</string>
-    <string name="updater_current_installed">Current version already installed. No action required.</string>
+    <string name="updater_title">\'su\' Updater</string>
+    <string name="updater_new_su_found">An update has been found. Install now?</string>
+    <string name="updater_current_installed">There is no update available</string>
     <string name="updater_update">Update</string>
-    <string name="updater_update_anyway">Update anyway</string>
-    <string name="updater_cool">That was cool, do it again</string>
-    <string name="updater_working">Working…</string>
-    <string name="updater_ok">okay!</string>
-    <string name="updater_fail">fail!</string>
+    <string name="updater_update_anyway">Reinstall</string>
+    <string name="updater_cool">Reinstall</string>
+    <string name="updater_working">Working\u2026</string>
+    <string name="updater_ok">OK</string>
+    <string name="updater_fail">Error</string>
     <string name="updater_not_found">not found</string>
     <string name="updater_update_failed">Update failed. Try again?</string>
-    <string name="updater_no_conn">Failed to download manifest. Check internet connection</string>
+    <string name="updater_no_conn">Cannot download manifest. Do you have a working internet connection?</string>
     <string name="updater_try_again">Try again</string>
-    <string name="updater_su_updated">su binary updated successfully</string>
-    <string name="updater_step_download_manifest">Downloading manifest…\u0020</string>
-    <string name="updater_step_parse_manifest">Parsing manifest…\u0020</string>
+    <string name="updater_su_updated">\'su\' updated successfully</string>
+    <string name="updater_step_download_manifest">Downloading manifest\u2026\u0020</string>
+    <string name="updater_step_parse_manifest">Parsing manifest\u2026\u0020</string>
     <string name="updater_step_latest_version">Latest version =\u0020</string>
-    <string name="updater_step_check_installed_version">Checking installed version =\u0020</string>
-    <string name="updater_step_fix_db">Fixing database…\u0020</string>
-    <string name="updater_step_unpack_sutools">Unpacking sutools…\u0020</string>
-    <string name="updater_step_check_installed_path">Checking current install path…\u0020</string>
-    <string name="updater_step_download_su">Downloading new binary…\u0020</string>
-    <string name="updater_step_get_root">Gaining root access…\u0020</string>
-    <string name="updater_step_remount_rw">Remounting /system as rw…\u0020</string>
-    <string name="updater_step_cp">Copying su to /system…\u0020</string>
-    <string name="updater_step_chmod">Changing su file mode to 06755…\u0020</string>
-    <string name="updater_step_ops_check">Making sure new su works…\u0020</string>
-    <string name="updater_step_mv">Moving su to it\'s final location…\u0020</string>
-    <string name="updater_step_remount_ro">Remounting /system as ro…\u0020</string>
-    <string name="updater_step_clean_up">Cleaning up…\u0020</string>
-    <string name="updater_remount_ro_failed">Failed to remount the system as read-only, please reboot to finish the update</string>
-    <string name="updater_find_su_failed">Failed to find currently installed su binary. Update cannot continue</string>
-    <string name="updater_bad_install_location">su binary is currently installed in /sbin. This updater is not capable of updating it. Please find a new ROM for your device.</string>
-    <string name="updater_bad_install_location_explained">This updater is incapable of updating your su binary since it is installed in /sbin. This is not an error in the updater, it is an error on the behalf of your ROM or kernel developer. You can continue to use Superuser with your outdated binary.</string>
-    <string name="updater_failed_remount">This updater cannot update the su binary on phones that have some kind of write protection on the system partition like S-ON. You can continue to use Superuser with your outdated binary, or update su with ROM Manager.</string>
+    <string name="updater_step_check_installed_version">Installed version =\u0020</string>
+    <string name="updater_step_fix_db">Fixing database\u2026\u0020</string>
+    <string name="updater_step_unpack_sutools">Unpacking sutools\u2026\u0020</string>
+    <string name="updater_step_check_installed_path">Checking current install path\u2026\u0020</string>
+    <string name="updater_step_download_su">Downloading new binary\u2026\u0020</string>
+    <string name="updater_step_get_root">Gaining root access\u2026\u0020</string>
+    <string name="updater_step_remount_rw">Remounting /system as rw\u2026\u0020</string>
+    <string name="updater_step_cp">Copying su to /system\u2026\u0020</string>
+    <string name="updater_step_chmod">Changing su file mode to 06755\u2026\u0020</string>
+    <string name="updater_step_ops_check">Making sure new su works\u2026\u0020</string>
+    <string name="updater_step_mv">Moving su to it\'s final location\u2026\u0020</string>
+    <string name="updater_step_remount_ro">Remounting /system as ro\u2026\u0020</string>
+    <string name="updater_step_clean_up">Cleaning up\u2026\u0020</string>
+    <string name="updater_remount_ro_failed">Cannot remount /system as read-only. Please reboot to finish the update</string>
+    <string name="updater_find_su_failed">Cannot find currently installed su binary. Update aborted</string>
+    <string name="updater_bad_install_location">\'su\' is currently installed in /sbin. This updater is not capable of updating it. Please update your ROM</string>
+    <string name="updater_bad_install_location_explained">This updater is incapable of updating \'su\' since it is installed in /sbin. This is not an error in the updater, it is an error on the behalf of your ROM or kernel developer. You can continue to use Superuser with your outdated binary.</string>
+
+    <string name="updater_failed_remount" product="tablet">This updater cannot update \'su\' on tablets with some kind of write protection on /system (like S-ON). You can continue to use Superuser with your outdated binary, or update with ROM Manager.</string>
+    <string name="updater_failed_remount" product="default">This updater cannot update \'su\' on phones with some kind of write protection on /system (like S-ON). You can continue to use Superuser with your outdated binary, or update with ROM Manager.</string>
 
     <string name="notification_text_allow">%1$s has been granted Superuser permissions</string>
     <string name="notification_text_deny">%1$s has been denied Superuser permissions</string>
 
-    <string name="notif_outdated_ticker">Your su binary is outdated</string>
-    <string name="notif_outdated_title">su binary outdated</string>
-    <string name="notif_outdated_text">Tap to update su binary</string>
+    <string name="notif_outdated_ticker">\'su\' is outdated</string>
+    <string name="notif_outdated_title">\'su\' outdated</string>
+    <string name="notif_outdated_text">Tap to update \'su\'</string>
     
     <string name="pin_enter_pin">Enter PIN</string>
     <string name="pin_new_pin">Enter new PIN</string>
     <string name="pin_confirm_pin">Confirm PIN</string>
     <string name="pin_mismatch">PINs don\'t match, try again</string>
-    <plurals name="pin_incorrect_try">
-        <item quantity="one">Last chance</item>
-        <item quantity="other">Nope - %1$d tries left</item>
-    </plurals>
+
     <string name="pin_enter_secret_code">Enter secret code</string>
     
     <string name="nfc_write_tag">Scan tag to write</string>
 
     <string name="malicious_apps_title">Warning</string>
-    <plurals name="malicious_apps_message1">
-    	<item quantity="one">The following package was found to be malicious:</item>
-    	<item quantity="other">The following packages were found to be malicious:</item>
-    </plurals>
-    <string name="malicious_apps_message2">Apps are marked as malicious because they contain elements that indicate they are attempting to grant root access, possibly without your consent. It is highly recommended you uninstall them immediately.</string>
+
+    <string name="malicious_apps_message2">Apps are marked as malicious when they contain elements indicating they are attempting to gain Superuser permissions without your consent. It is highly recommended you uninstall them immediately.</string>
     <string name="malicious_apps_uninstall">Uninstall</string>
     <string name="malicious_apps_ignore">Ignore</string>
     <string name="malicious_app_notification_ticker">Potentially malicious app detected</string>
@@ -253,12 +243,12 @@
     <string name="malicious_app_write">requests permission to write to permissions provider</string>
 
     <string name="changelog_full_title">Changelog</string>
-    <string name="changelog_title">What\'s New</string>
+    <string name="changelog_title">What\'s new</string>
 
     <string name="root_disabled_title">Enable root access?</string>
     <string name="root_disabled_summary">Root access is currently disabled for all applications by a system setting. Would you like to enable it?</string>
 
-    <!-- Do not translate any strings below, they are here to prevent build errors -->
-    <string name="before_secret_code">*#*#</string>
-    <string name="after_secret_code">#*#*</string>
+    <!-- Do not translate strings below, they are here to prevent build errors -->
+    <string name="before_secret_code" translatable="false">*#*#</string>
+    <string name="after_secret_code" translatable="false">#*#*</string>
 </resources>
